ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

dist_udevhwdb_DATA = \
	20-acpi-vendor.hwdb \
	20-bluetooth-vendor-product.hwdb \
	20-dmi-id.hwdb \
	20-net-ifname.hwdb \
	20-OUI.hwdb \
	20-pci-classes.hwdb \
	20-pci-vendor-model.hwdb \
	20-sdio-classes.hwdb \
	20-sdio-vendor-model.hwdb \
	20-usb-classes.hwdb \
	20-usb-vendor-model.hwdb \
	20-vmbus-class.hwdb \
	60-autosuspend-fingerprint-reader.hwdb \
	60-autosuspend.hwdb \
	60-evdev.hwdb \
	60-input-id.hwdb \
	60-keyboard.hwdb \
	60-seat.hwdb \
	60-sensor.hwdb \
	70-analyzers.hwdb \
	70-av-production.hwdb \
	70-cameras.hwdb \
	70-joystick.hwdb \
	70-mouse.hwdb \
	70-pointingstick.hwdb \
	70-pda.hwdb \
	70-touchpad.hwdb \
	80-ieee1394-unit-function.hwdb
