ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

KEYMAPS = \
	acer \
	acer-aspire_5720 \
	acer-aspire_8930 \
	acer-aspire_5920g \
	acer-aspire_6920 \
	acer-travelmate_c300 \
	asus \
	compaq-e_evo \
	dell \
	dell-latitude-xt2 \
	everex-xt5000 \
	fujitsu-amilo_li_2732 \
	fujitsu-amilo_pa_2548 \
	fujitsu-amilo_pro_edition_v3505 \
	fujitsu-amilo_pro_v3205 \
	fujitsu-amilo_si_1520 \
	fujitsu-esprimo_mobile_v5 \
	fujitsu-esprimo_mobile_v6 \
	genius-slimstar-320 \
	hewlett-packard \
	hewlett-packard-2510p_2530p \
	hewlett-packard-compaq_elitebook \
	hewlett-packard-pavilion \
	hewlett-packard-presario-2100 \
	hewlett-packard-tablet \
	hewlett-packard-tx2 \
	hewlett-packard_elitebook-8440p \
	ibm-thinkpad-usb-keyboard-trackpoint \
	inventec-symphony_6.0_7.0 \
	lenovo-3000 \
	lenovo-ideapad \
	lenovo-thinkpad-usb-keyboard-trackpoint \
	lenovo-thinkpad_x6_tablet \
	lenovo-thinkpad_x200_tablet \
	lg-x110 \
	logitech-wave \
	logitech-wave-cordless \
	logitech-wave-pro-cordless \
	maxdata-pro_7000 \
	medion-fid2060 \
	medionnb-a555 \
	micro-star \
	module-asus-w3j \
	module-ibm \
	module-lenovo \
	module-sony \
	module-sony-old \
	module-sony-vgn \
	module-sony-vpc \
	olpc-xo \
	onkyo \
	oqo-model2 \
	samsung-other \
	samsung-90x3a \
	samsung-sq1us \
	samsung-sx20s \
	toshiba-satellite_a100 \
	toshiba-satellite_a110 \
	toshiba-satellite_m30x \
	zepto-znote

dist_udevkeymap_DATA = \
	$(KEYMAPS)

EXTRA_DIST = \
	$(KEYMAPS)
